# 2025-12-04_KiroChallenge

./: .gitignore  README.md  mcp.json  test-api.sh  test_deployed_api.sh
.kiro/hooks/: update-docs-on-change.kiro.hook
.kiro/specs/code-organization/: design.md  requirements.md  tasks.md
.kiro/specs/user-registration/: design.md  requirements.md  tasks.md
.kiro/steering/: api-standards.md  aws-credentials.md  check-documentation.md
backend/: README.md  generate-docs.sh  pyproject.toml  requirements.txt  test_local.py  test_registration_api.py
backend/docs/: backend.html
backend/src/backend/: __init__.py  database.py  main.py  models.py
backend/src/backend/core/: __init__.py  config.py  exceptions.py
backend/src/backend/events/: __init__.py  api.py  repository.py  service.py
backend/src/backend/models/: __init__.py  event.py  registration.py  user.py
backend/src/backend/registrations/: __init__.py  api.py  repository.py  service.py
backend/src/backend/users/: api.py  repository.py  service.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: EventsView.tsx  RegistrationsView.tsx  UsersView.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
